# OpenSwitcher

./: AUTHORS  CONTRIBUTING.md  FAQ.md  Makefile.am  Makefile.in  README.md  TODO.md  configure  configure.ac  configure~
debian/: changelog  control  rules
doc/: openswitcher.1.in
openswitcher_include/: common.h.in  config.h.in  functional.h.in  main.h.in  utilities.h.in
scripts/: _openswitcher.in  config.cfg.in  header.sh.in  input-device-info.sh.in  install.sh.in  installfiles.sh.in  installpkgs.sh.in  openswitcher.fish.in  openswitcher.sh.in  openswitcher_autocomplete.sh.in  uninstall.sh.in
src/: functional.c  main.c  utilities.c
